# psm

./: .gitattributes  .gitignore  ANALYSE-ZUSAMMENFASSUNG.md  ARCHITEKTUR.md  ASTRO-MIGRATION-STATUS.md  ASTRO-MIGRATION.md  BingSiteAuth.xml  CLAUDE.md  DOKUMENTATION.md  IMPLEMENTATION-SUMMARY.md  LICENSE  PERFORMANCE-2025-11-11.md  PERFORMANCE.md  QUICK-START.md  README.md  astro-agent.task.md  astro.config.mjs  editor-task.md  index.html  lighthouserc.json  manifest.json  metadata.txt  package-lock.json  package.json  robots.txt  sitemap-0.xml  sitemap-index.xml  sw.js  task.md  tsconfig.json  ui-task.md
_astro/: bbch.CVXPBt0j.sqlite  bbch.ORNjW7Gl.sqlite  eppocodes.CzBvrJ2v.sqlite  index.9zWB08JX.css  index.B-QZfLCy.js  index.B020-0f6.js  index.B1rjTSlt.js  index.B4FIlGfT.js  index.B7LAEMgA.js  index.B8NoRBlO.js  index.BKG9zO4I.js  index.BOF67kan.js  index.BQ1QMxYA.css  index.BQgBsXFV.js  index.BYnQNgHq.js  index.BjYmd_M4.css  index.BkmIM19l.js  index.BpLk6Kcg.js  index.Bz2rHD05.css  index.BzZziNjo.js  index.C06YDL9W.js  index.C9pRG6w5.js  index.CA5PA6Pp.js  index.CKDSmSjT.js  index.CPadEFgJ.js  index.CQllaHGg.js  index.CU6LUtUd.css  index.CfQ3hiCg.js  index.CkTzkv0Y.js  index.CnoIx3-C.js  index.Cp3w8omI.js  index.CzdCh_wT.js  index.D0DlJfLu.js  index.D1c2XijN.js  index.D2RJH-qu.js  index.D36E7-Az.js  index.D5iyu6si.js  index.D8SAyDFT.js  index.D8tPKnpZ.js  index.DDpa22np.js  (+187 more)
database/: eppocodes.sqlite
docs/: GIT_LFS.md  TESTING.md  archive-plan.md  gps-lookup-plan.md  persistence-api-plan.md  (+3 more)
m/: index.html
wasm/psm-geo/: Cargo.toml
wasm/psm-geo/src/: lib.rs
(+176 files in other folders)
