[package]
name = "psm-geo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
geo = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true

# wasm-opt (Binaryen) ist im Remote-Build-Env nicht verfügbar → überspringen.
# Der Rust-Compiler optimiert bereits gut genug mit opt-level="s".
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
